# RAG-Email-Chatbot

./: .env.example  .gitignore  ARCHITECTURE.md  BUGS_AND_LESSONS.md  Dockerfile  IMDB_Ratings_Sentiment_Analysis_NLP_Model.ipynb  Makefile  README.md  credentials.json  docker-compose.yml  pyproject.toml
src/email_rag/: __init__.py  config.py
src/email_rag/api/: app.py  deps.py  middleware.py  schemas.py
src/email_rag/api/routes/: chat.py  health.py  ingest.py
src/email_rag/embeddings/: __init__.py  base.py  openai.py  sentence_transformer.py
src/email_rag/gmail/: auth.py  client.py  models.py
src/email_rag/processing/: chunker.py  metadata.py  parser.py  thread.py
src/email_rag/rag/: chain.py  conversation.py  prompt.py  retriever.py
src/email_rag/ui/: app.py  state.py
src/email_rag/ui/components/: chat.py  sidebar.py
src/email_rag/vectorstore/: schema.py  store.py
tests/: conftest.py
tests/unit/: test_chunker.py  test_conversation.py  test_parser.py  test_retriever.py
