[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-rag"
version = "0.1.0"
description = "Production-grade RAG chatbot for Gmail emails"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jouzou-M" }]

dependencies = [
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.130.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "chromadb>=0.5.0",
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.37.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/email_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring real credentials/APIs",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
